Fix widgets being to big on mobile

--- a/dashboard/main.css
+++ b/dashboard/main.css
@@ -691,4 +691,14 @@ input:checked+.slider:before {
     nav li a {
         width: calc(100% - 20px);
     }
+
+    .widget-background {
+        z-index: 2;
+    }
+
+    .widget-inner {
+        width: calc(100% - 50px);
+        min-width: unset;
+        max-height: 80%;;
+    }
 }
